--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,7 @@ sonar.organization=nubentos
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+sonar.sources=./CardioAPI_1.0.0_java/src
+sonar.language=java
+sonar.java.
+sonar.java.binaries=./CardioAPI_1.0.0_java/src/main/java
