--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,8 +9,8 @@ sonar.organization=nubentos
 #sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
-sonar.sources=./CardioAPI_1.0.0_java/src
-sonar.language=java
+sonar.sourceEncoding=UTF-8
+sonar.sources=CardioAPI_1.0.0_java/src
+sonar.language=java,js
 sonar.java.
-sonar.java.binaries=./CardioAPI_1.0.0_java/src/main/java
+sonar.java.binaries=CardioAPI_1.0.0_java/src/main/java
