--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,26 @@ sonar.organization=nubentos
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
-sonar.sources=CardioAPI_1.0.0_java/src
+sonar.sources=
 sonar.language=java,js
-sonar.java.
 sonar.java.binaries=CardioAPI_1.0.0_java/src/main/java
+
+module1.sonar.projectName=CardioAPI_1.0.0_java
+module1.sonar.projectBaseDir=CardioAPI_1.0.0_java
+module1.sonar.sources=src
+module1.sonar.language=java
+
+module2.sonar.projectName=CardioAPI_1.0.0_nodejs
+module2.sonar.projectBaseDir=CardioAPI_1.0.0_nodejs
+module2.sonar.sources=.
+module2.sonar.language=js
+module2.sonar.profile=node
+
+module3.sonar.projectName=CardioAPI_1.0.0_javascript
+module3.sonar.projectBaseDir=CardioAPI_1.0.0_javascript
+module3.sonar.sources=src
+module3.sonar.language=js
+module3.sonar.profile=node
+module3.sonar.tests=test
+
+
